client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client   # this replica effect on any pod labeled as client
  template:        # pod spec started
    metadata:
      name: client-pod
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: laithharb/web-app:v2
          resources:
            requests:     # request is not exact estimation, it is what we think that the pods might use. if we don't specify the limit this kind QOS called (Burstable)
              memory: 200Mi
              cpu: 100m

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  # type: NodePort
  type: ClusterIP
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
      # nodePort: 30008
