ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: www.hamid.com
    http:
      paths:
        - path: /api/?(.*)
          pathType: Prefix
          backend:
            service:
              name: server-srv
              port:
                number: 3000
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: client-srv
              port:
                number: 3000
